--- a/index.html
+++ b/index.html
@@ -8,16 +8,46 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
     <header>
-
+        <section class="container d-flex justify-content-between mt-4 fs-4">
+            <div>
+                <p><span class="bg-primary px-4 py-2 border-1 rounded-2 text-white">Dhaka</span> News</p>
+            </div>
+            <div class="d-flex justify-content-evenly">
+                <nav class="nav">
+                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link" href="#">Blog</a>
+                </nav>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="news-catagory-container">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center d-flex">
+                        <div id="navbarNav" class="navbar-nav fs-4 ">
+                            <!-- <a class="nav-item nav-link" href="#">Features</a>
+                            <a class="nav-item nav-link" href="#">Pricing</a>
+                            <a class="nav-item nav-link" href="#">Pricing</a>
+                            <a class="nav-item nav-link" href="#">Pricing</a>
+                            <a class="nav-item nav-link" href="#">Pricing</a>
+                            <a class="nav-item nav-link" href="#">Pricing</a> -->
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
+        <section class="news-container">
 
+        </section>
     </main>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
