--- a/index.html
+++ b/index.html
@@ -18,33 +18,24 @@
             <div>
                 <p><span class="bg-primary px-4 py-2 border-1 rounded-2 text-white">Dhaka</span> News</p>
             </div>
-            <div class="d-flex justify-content-evenly">
-                <nav class="nav">
-                    <a class="nav-link" href="#">News</a>
-                    <a class="nav-link" href="#">Blog</a>
-                </nav>
+            <div class="d-flex justify-content-center">
+                <p><span><a href="#" class="text-decoration-none px-4">News</a></span></p>
+                <p><span><a href="#" class="text-decoration-none">Blogs</a></span></p>
             </div>
         </section>
         <section>
             <div class="container">
-                <div class="news-catagory-container">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center d-flex">
-                        <div id="navbarNav" class="navbar-nav fs-4 ">
-                            <!-- <a class="nav-item nav-link" href="#">Features</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a> -->
-                        </div>
-                    </nav>
-                </div>
+                <ul id="nav">
+
+                </ul>
             </div>
         </section>
     </header>
     <main>
-        <section class="news-container">
+        <section class="news-container container mt-4 mx-8">
+            <div id="card" class="card mb-3 mx-auto">
 
+            </div>
         </section>
     </main>
     <script src="js/app.js"></script>
