--- a/index.html
+++ b/index.html
@@ -29,20 +29,31 @@
 
                 </ul>
             </div>
+
         </section>
     </header>
     <main>
+        <div id="spinner" class="spinner-border text-light" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+        <div id="no-data-found" class="d-none">
+            <h2 class="text-warning">No news category are found</h2>
+        </div>
         <section class="news-container container mt-4 mx-8">
             <div id="card" class="card mb-3 mx-auto">
 
             </div>
+        </section>
+        <section class="modal">
+
+
         </section>
     </main>
     <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/3894a6573f.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
