--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             </div>
             <div class="d-flex justify-content-center">
                 <p><span><a href="#" class="text-decoration-none px-4">News</a></span></p>
-                <p><span><a href="#" class="text-decoration-none">Blogs</a></span></p>
+                <p><span><a href="#" class="text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Blogs</a></span></p>
             </div>
+
+
         </section>
         <section>
             <div class="container">
@@ -33,9 +36,6 @@
         </section>
     </header>
     <main>
-        <div id="spinner" class="spinner-border text-light" role="status">
-            <span class="visually-hidden">Loading...</span>
-        </div>
         <div id="no-data-found" class="d-none">
             <h2 class="text-warning">No news category are found</h2>
         </div>
@@ -47,6 +47,13 @@
         <section class="modal">
 
 
+        </section>
+        <section id="loader" class="d-none">
+            <div class="d-flex justify-content-center align-items-center" style="height:400px">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
         </section>
     </main>
     <script src="js/app.js"></script>
