ternary operation and a few things implement correctly

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div class="d-flex justify-content-center">
                 <p><span><a href="#" onclick="loadNews('08')" class="text-decoration-none px-4">News</a></span></p>
                 <p><span><a href="#" class="text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">Blogs</a></span></p>
+                            data-bs-target="#blogModal">Blogs</a></span></p>
             </div>
 
             <!-- Modal -->
-            <div class=" modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class=" modal fade" id="blogModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
